# git-smart-clone

./: .gitignore  .python-version  LICENSE  README.md  pyproject.toml
src/git_smart_clone/: smart_clone.py
