[project]
name = "git-smart-clone"
version = "0.1.2"
description = "A simple git extension that clones a git directory to subfolder based on the git url"
authors = [
    {name = "Sam Phinizy", email = "sam@phin.tech"},
]
dependencies = [
    "click>=8.1.3",
    "git-url-parse>=1.2.2",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[project.scripts]
git-smart-clone = "git_smart_clone.smart_clone:git_smart_clone"

[tool]
[tool.pdm]
[tool.pdm.build]
excludes = ["./**/.git"]
package-dir = "src"

